--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhuKhao Japan</title>
+    <title>ATK System</title>
     <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
     <!-- tailwindcss -->
     <script src="https://cdn.tailwindcss.com"></script>
