added .env .gitignore

--- a/templates/atk_html/success.html
+++ b/templates/atk_html/success.html
@@ -8,7 +8,7 @@
     <div class="text-center">
         <h1 class="text-2xl font-bold mb-2">Thank You!</h1>
         <p class="mb-4">You have successfully uploaded your ATK results.</p>
-        <!-- <a href="" class="text-indigo-600 hover:text-indigo-800 transition duration-300">Return to the homepage</a> -->
+        <a href="{% url 'dashboard' %}" class="text-indigo-600 hover:text-indigo-800 transition duration-300">Return to Dashboard page</a>
     </div>
 </div>
 
