--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,13 +2,18 @@
 <header>
   <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5">
       <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl">
-          <a href="https://flowbite.com" class="flex items-center">
+          <a href="{% url 'login' %}" class="flex items-center">
               <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
               <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">ATK System</span>
           </a>
           <div class="flex items-center lg:order-2">
+            {% if request.user.is_authenticated %}
+            <div class="text-bold text-gray pr-3">Welcome {{ request.user.username }}</div>
+            <a href="{% url 'logout' %}" class="text-gray-800 bg-blue-500 hover:bg-blue-50 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Log out</a>
+            {% else %}
               <a href="{% url 'login' %}" class="text-gray-800 bg-blue-500 hover:bg-blue-50 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Log in</a>              
-              <a href="{% url 'register' %}" class="text-gray-800 bg-blue-500 hover:bg-blue-50 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Register</a>              
+              <a href="{% url 'register' %}" class="text-gray-800 bg-blue-500 hover:bg-blue-50 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Register</a> 
+            {% endif %}             
           </div>
       </div>
   </nav>
